@@ -37,7 +37,6 @@
 namespace pdscalibdata {
 
 /**
- *
  *  This software was developed for the LCLS project.  If you use all or 
  *  part of it, please give an appropriate acknowledgment.
  *
