@@ -44,17 +44,21 @@ namespace pdscalibdata {
 PnccdCommonModeV1::PnccdCommonModeV1() 
 : PnccdBaseV1 ()
 {
-  //std::fill_n(m_pars, int(CMSize), pars_t(0));
-  m_pars[0] = 1; //= {1, 50, 10}; - default common_mode parameters
-  m_pars[1] = 50;
-  m_pars[2] = 10;
+  std::fill_n(m_pars, int(CMSize), pars_t(0));
+  // default common_mode parameters
+  m_pars[0] = 1;   // Common mode algorithm number
+  m_pars[1] = 300; // Threshold; values below threshold are averaged
+  m_pars[2] = 50;  // Maximal correction; correction is applied if it is less than this value
+  m_pars[3] = 128; // Number of pixels for averaging
+  m_pars[4] = 0.2; // Fraction of pixels in cm peak ...
 }
 
 
 PnccdCommonModeV1::PnccdCommonModeV1 (const std::string& fname) 
 : PnccdBaseV1 ()
 {
-  load_pars_from_file <pars_t> (fname, "common_mode", CMSize, m_pars); 
+  std::fill_n(m_pars, int(CMSize), pars_t(0));
+  load_pars_from_file <pars_t> (fname, "common_mode", CMSize, m_pars, 2);
 }
 
 
