@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-05
+2014-02-07 Mikhail Dubrovin
+- in PnccdCommonModeV1 extend CMSize up to 16 parameters
+- in include/GlobalMethods.h load_pars_from_file add parameter check_bits
+
 Tag: V00-05-04
 2014-02-05 Mikhail Dubrovin
 - cosmetic changes in Pnccd* modules
